--- a/.gitignore
+++ b/.gitignore
@@ -42,10 +42,11 @@ lerna-debug.log*
 .env.production.local
 .env.local
 
+
 # temp directory
 .temp
 .tmp
-
+.compose
 # Runtime data
 pids
 *.pid
@@ -54,3 +55,4 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+compose.yml
