--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:dev": "NODE_ENV=development nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+    "start:debug": "NODE_ENV=development nest start --debug --watch",
+    "start-pro:dev":"NODE_ENV=production nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+    "start-pro:debug": "NODE_ENV=production nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
