--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "NODE_ENV=development nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "NODE_ENV=development nest start --debug --watch",
-    "start-pro:dev":"NODE_ENV=production nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+    "start-pro:dev": "NODE_ENV=production nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start-pro:debug": "NODE_ENV=production nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -22,6 +22,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@keyv/redis": "^4.3.2",
+    "@nestjs/cache-manager": "^3.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
@@ -33,8 +35,11 @@
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^11.0.11",
     "bcrypt": "^5.1.1",
+    "cache-manager": "^6.4.1",
+    "cache-manager-ioredis-yet": "^2.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "ioredis": "^5.6.0",
     "mongoose": "^8.12.1",
     "openai": "^4.86.1",
     "pg": "^8.13.1",
